Fixed word wrap on primary buttons

--- a/css/jho.css
+++ b/css/jho.css
@@ -187,6 +187,7 @@ span.strong {
 	background: #FFFFFF;
 	color: #5FBFC2;
 	border: 1px solid #5FBFC2;
+	white-space: nowrap;
 }
 
 .jh-button-secondary {
